# tap

./: .gitignore  Makefile  README.md  docs.md  modif.md
bridge/: Cargo.toml  README.md
bridge/src/: lib.rs  main.rs  server.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/app/: init.rs  input.rs  mod.rs  quests.rs  state.rs  tab.rs
cli/src/runtime/: client.rs  keys.rs  loop_run.rs  (+1 more)
gui/: eslint.config.js  jsconfig.json  package-lock.json  package.json  tailwind.config.ts
gui/src/: Actor.svelte  App.svelte  Scene.svelte  app.css  main.ts  svelte.d.ts
server/: Cargo.toml  README.md  world.yml
server/src/: main.rs
server/src/config/: mod.rs  validate.rs
server/src/config/config/: direction.rs  item.rs  location.rs  mod.rs  npc.rs  quest.rs  world.rs
server/src/logger/: files.rs  mod.rs  time.rs
server/src/network/: dispatch.rs  handle.rs  listener.rs
server/src/network/handlers/: chat.rs  mod.rs  resolve.rs
server/src/network/handlers/combat/: attack.rs  mod.rs
server/src/network/handlers/group/: create.rs  invite.rs  join.rs  leave.rs  mod.rs
server/src/network/handlers/inventory/: drop.rs  equip.rs  list.rs  mod.rs  take.rs
server/src/network/handlers/quest/: accept.rs  complete.rs  list.rs  mod.rs  progress.rs  request.rs  status.rs  summary.rs
server/src/network/handlers/session/: connect.rs  disconnect.rs  mod.rs  quit.rs  status.rs  who.rs
server/src/network/handlers/world/: look.rs  mod.rs  movement.rs  talk.rs
server/src/protocol/: command.rs  response.rs
server/src/state/: game.rs  group.rs  player.rs  world.rs
(+96 files in other folders)
