[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

sea-orm = { version = "1.1.20", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros"
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = "0.4.44"
env = "1.0.1"
dotenvy = "0.15.7"
serde_yaml = "0.9.34"
tracing = "0.1.44"
